tests/golden/fixtures/syntax-symbolic-subscripts-err-unsupported-field-type/expected.err
Error: invalid syntax: expected something else, found identifier 'dword'
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-unsupported-field-type/input.k65:2:6 ]
   │
 2 │   .a:dword
   │      ──┬──  
   │        ╰──── here
───╯
